@@ -473,6 +473,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       createKeyBundle ().
     - src/onmainwindow.cpp: add and use key_types parameter to
       startWinServers ().
+    - src/onmainwindow.cpp: actually use key_type parameter in startSshd ()
+      and make selection more generic.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
